Bug 255196 Last character of DDE request is truncated r=ere sr=rbs